--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@prisma/client": "^6.8.2",
         "express": "^5.1.0"
     },
     "devDependencies": {
         "@types/express": "^5.0.2",
         "@types/node": "^22.15.19",
         "nodemon": "^3.1.10",
+        "prisma": "^6.8.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
     }
