--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon --exec ts-node --transpile-only src/index.ts"
+        "dev": "nodemon src/index.ts",
+        "build": "tsc",
+        "start": "npm run build && node build/index.js"
     },
     "keywords": [],
     "author": "",
